# coya

./: .clang-format  .clangd  .gitignore  CMakeCache.txt  CMakeLists.txt
.github/: copilot-instructions.md
renderdoc/: coya.cap
shaders/: CmakeLists.txt
shaders/compiled/: polygon_frag.spv  polygon_vert.spv
shaders/source/: polygon.frag  polygon.vert  polygon_frag.glsl  polygon_vert.glsl
src/: CMakeLists.txt  camera.c  camera.h  main.c
src/configure/: CMakeLists.txt  constants.h.in
src/core/: event.c  event.h  logger.c  logger.h  memory.c  memory.h  util.h
src/input/: input.c  input.h
src/math/: omath.c  omath.h  types.h
src/platform/: filesystem.c  filesystem.h  platform.h  util.h  window.c  window.h
src/platform/windows/: directory.c  poll_events.c  util.c  window.c
src/renderer/: renderer.c  renderer.h  types.h
src/renderer/vulkan/: begin_frame.c  buffer.c  buffer.h  cleanup.c  command_buffer.c  command_buffer.h  context.c  context.h  device.c  device.h  end_frame.c  fence.c  fence.h  framebuffer.c  framebuffer.h  image.c  image.h  init.c  pipeline.c  pipeline.h  renderpass.c  renderpass.h  shader_utils.c  shader_utils.h  swapchain.c  swapchain.h  texture.c  types.h  update.c  util.c  util.h
src/renderer/vulkan/shader/: material_shader.c  material_shader.h  shader.c  shader.h
src/resources/: types.h
src/util/: bitmap.c  bitmap.h  ppm.c  ppm.h
